apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: edu-platform
  annotations:
    ingress.alb.yc.io/subnets: "edu-subnet-80903"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8000
      - path: /backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-api
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-app
            port:
              number: 80
